August_30/August_30/src/objects/Devops_questions__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Choice__c</fullName>
        <label>Multiple Choice</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Answer1</fullName>
                </value>
                <value>
                    <fullName>Answer2</fullName>
                </value>
                <value>
                    <fullName>Answer3</fullName>
                </value>
                <value>
                    <fullName>Answer4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <displayFormat>Q-{0}</displayFormat>
        <label>Questions</label>
        <type>AutoNumber</type>
    </fields>
    <label>Devops questions</label>
    <nameField>
        <label>Devops questions</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devops questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>